# udemy-rust-lesson2

./: Cargo.toml
src/: lib.rs  main.rs  sec15_cli_app.rs  sec1to4.rs  sec5_fizzbuzz.rs  sec6_ownership.rs  sec7_struct_enum.rs  sec8_binaries_libraries.rs  sec8_test_module.rs  sec9_trait.rs
src/models/: mod.rs
src/sec8_test_module/: sub_module1.rs  sub_module2.rs
src/services/io/: mod.rs
src/services/register/: mod.rs
src/services/summarize/: mod.rs
src/services/validate/: mod.rs
store/: data.json
