[package]
name = "udemy-rust-lesson2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[profile.dev]
# opt-level = 1  # 最適化レベル。devでは0がデフォルト

[profile.release]
# opt-level = 3  # デフォルト3
